# AdaptiveClustering

./: .gitignore  Absenteeism_at_work.csv  CMakeLists.txt  Makefile  README.md  adaptive_clustering.cpp  adaptive_clustering.h  error.h  main.cpp
dataset/: dim1024.csv
dataset_benchmark/: dim064.csv  dim128.csv  dim256.csv  dim512.csv
kmeans/: kmeans.h
plot/: centroids_dataout0.csv  dataout0.csv  outliers.ipynb  outliers_allCS.ipynb
plot/.ipynb_checkpoints/: outliers-checkpoint.ipynb  outliers_allCS-checkpoint.ipynb
